--- a/style.css
+++ b/style.css
@@ -5,7 +5,10 @@
 }
 
 body {
-  background-color: grey;
+  background-image:url(./images/lake.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
 }
 
 li {
@@ -14,6 +17,138 @@ li {
 
 a {
   text-decoration: none;
-  color: #fff;
+  color: #000;
   font-size: 1rem;
+}
+
+a:hover {
+  color: rgb(8, 145, 145);
+}
+
+header {
+  position:relative;
+  padding: 0 2 rem;
+}
+
+.navbar {
+  width: 100%;
+  height: 60px;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navbar .logo {
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 0 2rem;
+}
+
+.navbar .links {
+  display: flex;
+  gap: 2rem;
+}
+
+.navbar .toggle-btn {
+  color: #000;
+  font-size: 1.5rem;
+  cursor: pointer;
+  display: none;
+    padding: 0 2rem;
+}
+
+.navbar .toggle-btn:hover {
+  color: rgb(8, 145, 145);
+}
+
+.action-btn {
+  background-color: rgb(8, 145, 145);
+  color: #fff;
+  padding: 0.5rem 1rem;
+  border: none;
+  outline: none;
+  border-radius: 20px;
+  font-size: 0.8rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: scale 0.2 ease;
+}
+
+.action-btn:hover {
+  scale: 1.05;
+  color: #fff;
+}
+
+.action-btn:active {
+  scale: 0.95;
+}
+
+
+
+/* Dropdown Menu */
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  right: 2rem;
+  top: 60px;
+  height: 0;
+  width: 300px;
+  background: rgba(0, 0, 0, 0.521);
+  backdrop-filter: blur(35px);
+  border-radius: 10px;
+  overflow: hidden;
+  transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.dropdown-menu.open {
+  height: 240px;
+}
+
+.dropdown-menu li a{
+  color: #fff;
+}
+
+.dropdown-menu li {
+  padding: 0.7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dropdown-menu .action-btn {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+/* Responsive Design */
+
+@media (max-width: 576px) {
+  .dropdown-menu {
+    left: 2rem;
+    width: unset;
+  }
+}
+
+@media (max-width: 992px) {
+  .navbar .links,
+  .navbar .action-btn {
+    display: none;
+  }
+
+  .navbar .toggle-btn {
+    display: block;
+  }
+
+  .dropdown-menu {
+    display: block;
+  }
+}
+
+@media (min-width:999px) {
+  .action-btn {
+  margin: 0 2rem;
+  }
 }
